fix: better image loading on mobile devices

--- a/webroot/css/mobile-frontend.css
+++ b/webroot/css/mobile-frontend.css
@@ -135,6 +135,7 @@
     div.first-column {
         width: 23% ! important;
         margin-right: 3% ! important;
+        min-height: 1px;
     }
     .blog-post-wrapper div.third-column div.additional-info {
         margin-top: 10px ! important;
